--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,13 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Tests Passed\n",
       "Tests Passed\n"
      ]
     }
@@ -167,11 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "def token_lookup():\n",
     "    \"\"\"\n",
@@ -179,8 +186,17 @@
     "    :return: Tokenized dictionary where the key is the punctuation and the value is the token\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "        \n",
-    "    return None\n",
+    "    return {'.': '||period||',\n",
+    "     ',': '||comma||',\n",
+    "     '\"': '||quotation_mark||',\n",
+    "     ';': '||semicolon||',\n",
+    "     '!': '||exclamation_mark||',\n",
+    "     '?': '||question_mark||',\n",
+    "     '(': '||left_paren||',\n",
+    "     ')': '||right_paren||',\n",
+    "     '-': '||dash||',\n",
+    "     '\\n': '||return||'\n",
+    "    }\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -194,15 +210,13 @@
    "source": [
     "## Pre-process all the data and save it\n",
     "\n",
-    "Running the code cell below will pre-process all the data and save it to file. You're encouraged to lok at the code for `preprocess_and_save_data` in the `helpers.py` file to see what it's doing in detail, but you do not need to change this code."
+    "Running the code cell below will pre-process all the data and save it to file. You're encouraged to look at the code for `preprocess_and_save_data` in the `helpers.py` file to see what it's doing in detail, but you do not need to change this code."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -222,10 +236,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -249,11 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No GPU found. Please use a GPU to train your neural network.\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -308,14 +326,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 5])\n",
+      "tensor([[37, 38, 39, 40, 41],\n",
+      "        [15, 16, 17, 18, 19],\n",
+      "        [14, 15, 16, 17, 18],\n",
+      "        [43, 44, 45, 46, 47],\n",
+      "        [42, 43, 44, 45, 46],\n",
+      "        [31, 32, 33, 34, 35],\n",
+      "        [38, 39, 40, 41, 42],\n",
+      "        [18, 19, 20, 21, 22],\n",
+      "        [ 4,  5,  6,  7,  8],\n",
+      "        [12, 13, 14, 15, 16]])\n",
+      "torch.Size([10])\n",
+      "tensor([42, 20, 19, 48, 47, 36, 43, 23,  9, 17])\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import TensorDataset, DataLoader\n",
-    "\n",
     "\n",
     "def batch_data(words, sequence_length, batch_size):\n",
     "    \"\"\"\n",
@@ -326,12 +361,38 @@
     "    :return: DataLoader with batched data\n",
     "    \"\"\"\n",
     "    # TODO: Implement function\n",
+    "    feature_tensor, target_tensor = [], []\n",
     "    \n",
+    "    for i in range(len(words)):\n",
+    "        target_idx = i + sequence_length\n",
+    "        if target_idx < len(words):\n",
+    "            features = words[i:i + sequence_length]\n",
+    "            feature_tensor.append(features)\n",
+    "            \n",
+    "            target = words[target_idx]\n",
+    "            target_tensor.append(target)\n",
+    "    \n",
+    "    data_set = TensorDataset(\n",
+    "        torch.from_numpy(np.array(feature_tensor)),\n",
+    "        torch.from_numpy(np.array(target_tensor))\n",
+    "    )\n",
+    "    data_loader = DataLoader(data_set, batch_size=batch_size, shuffle=True)\n",
     "    # return a dataloader\n",
-    "    return None\n",
+    "    return data_loader\n",
     "\n",
     "# there is no test for this function, but you are encouraged to create\n",
-    "# print statements and tests of your own\n"
+    "# print statements and tests of your own\n",
+    "\n",
+    "test_text = range(50)\n",
+    "t_loader = batch_data(test_text, sequence_length=5, batch_size=10)\n",
+    "\n",
+    "data_iter = iter(t_loader)\n",
+    "sample_x, sample_y = data_iter.next()\n",
+    "\n",
+    "print(sample_x.shape)\n",
+    "print(sample_x)\n",
+    "print(sample_y.shape)\n",
+    "print(sample_y)"
    ]
   },
   {
