--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -334,18 +334,18 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[37, 38, 39, 40, 41],\n",
+      "tensor([[30, 31, 32, 33, 34],\n",
+      "        [39, 40, 41, 42, 43],\n",
+      "        [11, 12, 13, 14, 15],\n",
+      "        [25, 26, 27, 28, 29],\n",
+      "        [26, 27, 28, 29, 30],\n",
+      "        [40, 41, 42, 43, 44],\n",
+      "        [23, 24, 25, 26, 27],\n",
       "        [15, 16, 17, 18, 19],\n",
-      "        [14, 15, 16, 17, 18],\n",
-      "        [43, 44, 45, 46, 47],\n",
-      "        [42, 43, 44, 45, 46],\n",
-      "        [31, 32, 33, 34, 35],\n",
-      "        [38, 39, 40, 41, 42],\n",
-      "        [18, 19, 20, 21, 22],\n",
-      "        [ 4,  5,  6,  7,  8],\n",
-      "        [12, 13, 14, 15, 16]])\n",
+      "        [10, 11, 12, 13, 14],\n",
+      "        [ 7,  8,  9, 10, 11]])\n",
       "torch.Size([10])\n",
-      "tensor([42, 20, 19, 48, 47, 36, 43, 23,  9, 17])\n"
+      "tensor([35, 44, 16, 30, 31, 45, 28, 20, 15, 12])\n"
      ]
     }
    ],
@@ -413,11 +413,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "\n",
@@ -435,9 +441,23 @@
     "        super(RNN, self).__init__()\n",
     "        # TODO: Implement function\n",
     "        \n",
-    "        # set class variables\n",
+    "        # class variables\n",
+    "        self.output_size = output_size\n",
+    "        self.n_layers = n_layers\n",
+    "        self.hidden_dim = hidden_dim\n",
     "        \n",
-    "        # define model layers\n",
+    "        # embedding and LSTM layers\n",
+    "        self.embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.lstm = nn.LSTM(\n",
+    "            embedding_dim,\n",
+    "            hidden_dim,\n",
+    "            n_layers,\n",
+    "            dropout=dropout,\n",
+    "            batch_first=True\n",
+    "        )\n",
+    "        \n",
+    "        # linear and sigmoid layers\n",
+    "        self.fc = nn.Linear(hidden_dim, output_size)\n",
     "    \n",
     "    \n",
     "    def forward(self, nn_input, hidden):\n",
@@ -448,9 +468,25 @@
     "        :return: Two Tensors, the output of the neural network and the latest hidden state\n",
     "        \"\"\"\n",
     "        # TODO: Implement function   \n",
-    "\n",
+    "        batch_size = nn_input.size(0)\n",
+    "        \n",
+    "        # embeddings and lstm_out\n",
+    "        embeddings = self.embedding(nn_input)\n",
+    "        lstm_out, hidden = self.lstm(embeddings, hidden)\n",
+    "        \n",
+    "        # stack up lstm outputs\n",
+    "        lstm_out = lstm_out.contiguous().view(-1, self.hidden_dim)\n",
+    "        \n",
+    "        # fully-connected layer\n",
+    "        out = self.fc(lstm_out)\n",
+    "        \n",
+    "        # reshape to be (batch_size, seq_length, output_size)\n",
+    "        out = out.view(batch_size, -1, self.output_size)\n",
+    "        # get last batch\n",
+    "        out = out[:, -1]\n",
+    "        \n",
     "        # return one batch of output word scores and the hidden state\n",
-    "        return None, None\n",
+    "        return out, hidden\n",
     "    \n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
@@ -462,8 +498,14 @@
     "        # Implement function\n",
     "        \n",
     "        # initialize hidden state with zero weights, and move to GPU if available\n",
-    "        \n",
-    "        return None\n",
+    "        weight = next(self.parameters()).data\n",
+    "        if (train_on_gpu):\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().cuda(),\n",
+    "                      weight.new(self.n_layers, batch_size, self.hidden_dim).zero_().cuda())\n",
+    "        else:\n",
+    "            hidden = (weight.new(self.n_layers, batch_size, self.hidden_dim).zero_(),\n",
+    "                      weight.new(self.n_layers, batch_size, self.hidden_dim).zero_())\n",
+    "        return hidden\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
