--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -114,7 +114,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tests Passed\n",
       "Tests Passed\n"
      ]
     }
@@ -334,18 +333,18 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[30, 31, 32, 33, 34],\n",
-      "        [39, 40, 41, 42, 43],\n",
-      "        [11, 12, 13, 14, 15],\n",
-      "        [25, 26, 27, 28, 29],\n",
-      "        [26, 27, 28, 29, 30],\n",
+      "tensor([[44, 45, 46, 47, 48],\n",
       "        [40, 41, 42, 43, 44],\n",
-      "        [23, 24, 25, 26, 27],\n",
-      "        [15, 16, 17, 18, 19],\n",
-      "        [10, 11, 12, 13, 14],\n",
-      "        [ 7,  8,  9, 10, 11]])\n",
+      "        [43, 44, 45, 46, 47],\n",
+      "        [26, 27, 28, 29, 30],\n",
+      "        [14, 15, 16, 17, 18],\n",
+      "        [21, 22, 23, 24, 25],\n",
+      "        [27, 28, 29, 30, 31],\n",
+      "        [ 3,  4,  5,  6,  7],\n",
+      "        [39, 40, 41, 42, 43],\n",
+      "        [32, 33, 34, 35, 36]])\n",
       "torch.Size([10])\n",
-      "tensor([35, 44, 16, 30, 31, 45, 28, 20, 15, 12])\n"
+      "tensor([49, 45, 48, 31, 19, 26, 32,  8, 44, 37])\n"
      ]
     }
    ],
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -531,13 +530,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed\n"
+     ]
+    }
+   ],
    "source": [
-    "def forward_back_prop(rnn, optimizer, criterion, inp, target, hidden):\n",
+    "def forward_back_prop(rnn, optimizer, criterion, inputs, target, hidden):\n",
     "    \"\"\"\n",
     "    Forward and backward propagation on the neural network\n",
     "    :param decoder: The PyTorch Module that holds the neural network\n",
@@ -551,11 +556,33 @@
     "    # TODO: Implement Function\n",
     "    \n",
     "    # move data to GPU, if available\n",
+    "    if(train_on_gpu):\n",
+    "        rnn.cuda()\n",
+    "        inputs, labels = inputs.cuda(), labels.cuda()\n",
+    "    \n",
+    "    # Creating new variables for the hidden state, otherwise\n",
+    "    # we'd backprop through the entire training history\n",
+    "    hidden_state = tuple([each.data for each in hidden])\n",
+    "    \n",
+    "    # zero accumulated gradients\n",
+    "    rnn.zero_grad()\n",
+    "    \n",
+    "    # get the output from the model\n",
+    "    output, hidden_state = rnn(inputs, hidden_state)\n",
+    "    \n",
+    "    # calculate the loss\n",
+    "    loss = criterion(output, target)\n",
     "    \n",
     "    # perform backpropagation and optimization\n",
+    "    loss.backward()\n",
     "\n",
+    "    clip = 5 # gradient clipping\n",
+    "    # `clip_grad_norm` helps prevent the exploding gradient problem in RNNs / LSTMs.\n",
+    "    nn.utils.clip_grad_norm_(rnn.parameters(), clip)\n",
+    "    optimizer.step()\n",
+    "    \n",
     "    # return the loss over a batch and the hidden state produced by our model\n",
-    "    return None, None\n",
+    "    return loss.item(), hidden_state\n",
     "\n",
     "# Note that these tests aren't completely extensive.\n",
     "# they are here to act as general checks on the expected outputs of your functions\n",
@@ -580,10 +607,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -644,17 +669,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
-    "sequence_length =   # of words in a sequence\n",
+    "sequence_length = 10 # of words in a sequence\n",
     "# Batch Size\n",
-    "batch_size = \n",
+    "batch_size = 128\n",
     "\n",
     "# data loader - do not change\n",
     "train_loader = batch_data(int_text, sequence_length, batch_size)"
@@ -662,29 +685,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = \n",
+    "num_epochs = 7\n",
     "# Learning Rate\n",
-    "learning_rate = \n",
+    "learning_rate = 0.001\n",
     "\n",
     "# Model parameters\n",
     "# Vocab size\n",
-    "vocab_size = \n",
+    "vocab_size = len(vocab_to_int)\n",
     "# Output size\n",
-    "output_size = \n",
+    "output_size = vocab_size\n",
     "# Embedding Dimension\n",
-    "embedding_dim = \n",
+    "embedding_dim = 300\n",
     "# Hidden Dimension\n",
-    "hidden_dim = \n",
+    "hidden_dim = 256\n",
     "# Number of RNN Layers\n",
-    "n_layers = \n",
+    "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 500"
@@ -896,7 +917,7 @@
    "outputs": [],
    "source": [
     "# save script to a text file\n",
-    "f =  open(\"generated_script_1.txt\",\"w\")\n",
+    "f = open(\"generated_script_1.txt\",\"w\")\n",
     "f.write(generated_script)\n",
     "f.close()"
    ]
