--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -131,7 +131,7 @@
     "    # TODO: Implement Function\n",
     "    counts = Counter(text)\n",
     "    vocab = sorted(counts, key=counts.get, reverse=True)\n",
-    "    vocab_to_int = {word: ii for ii, word in enumerate(vocab, 1)}\n",
+    "    vocab_to_int = {word: i for i, word in enumerate(vocab, 0)}\n",
     "    int_to_vocab = dict((v, k) for k, v in vocab_to_int.items())\n",
     "    # return tuple\n",
     "    return (vocab_to_int, int_to_vocab)\n",
@@ -333,18 +333,18 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[44, 45, 46, 47, 48],\n",
-      "        [40, 41, 42, 43, 44],\n",
-      "        [43, 44, 45, 46, 47],\n",
-      "        [26, 27, 28, 29, 30],\n",
-      "        [14, 15, 16, 17, 18],\n",
-      "        [21, 22, 23, 24, 25],\n",
-      "        [27, 28, 29, 30, 31],\n",
-      "        [ 3,  4,  5,  6,  7],\n",
-      "        [39, 40, 41, 42, 43],\n",
-      "        [32, 33, 34, 35, 36]])\n",
+      "tensor([[ 4,  5,  6,  7,  8],\n",
+      "        [ 9, 10, 11, 12, 13],\n",
+      "        [31, 32, 33, 34, 35],\n",
+      "        [36, 37, 38, 39, 40],\n",
+      "        [ 2,  3,  4,  5,  6],\n",
+      "        [10, 11, 12, 13, 14],\n",
+      "        [34, 35, 36, 37, 38],\n",
+      "        [42, 43, 44, 45, 46],\n",
+      "        [ 8,  9, 10, 11, 12],\n",
+      "        [41, 42, 43, 44, 45]])\n",
       "torch.Size([10])\n",
-      "tensor([49, 45, 48, 31, 19, 26, 32,  8, 44, 37])\n"
+      "tensor([ 9, 14, 36, 41,  7, 15, 39, 47, 13, 46])\n"
      ]
     }
    ],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,13 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Training parameters\n",
     "# Number of Epochs\n",
-    "num_epochs = 7\n",
+    "num_epochs = 10\n",
     "# Learning Rate\n",
     "learning_rate = 0.001\n",
     "\n",
@@ -703,12 +703,12 @@
     "# Embedding Dimension\n",
     "embedding_dim = 300\n",
     "# Hidden Dimension\n",
-    "hidden_dim = 256\n",
+    "hidden_dim = 260\n",
     "# Number of RNN Layers\n",
     "n_layers = 2\n",
     "\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 500"
+    "show_every_n_batches = 6000"
    ]
   },
   {
@@ -721,11 +721,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 10 epoch(s)...\n",
+      "Epoch:    1/10    Loss: 4.475128421266874\n",
+      "\n",
+      "Epoch:    2/10    Loss: 3.9611172552241505\n",
+      "\n",
+      "Epoch:    3/10    Loss: 3.768898818461757\n",
+      "\n",
+      "Epoch:    4/10    Loss: 3.6452088855503106\n",
+      "\n",
+      "Epoch:    5/10    Loss: 3.557033226263884\n",
+      "\n",
+      "Epoch:    6/10    Loss: 3.491794526277647\n",
+      "\n",
+      "Epoch:    7/10    Loss: 3.43539343682162\n",
+      "\n",
+      "Epoch:    8/10    Loss: 3.3874010211820327\n",
+      "\n",
+      "Epoch:    9/10    Loss: 3.345511862632619\n",
+      "\n",
+      "Epoch:   10/10    Loss: 3.3176340827950104\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Shinobi/anaconda3/lib/python3.6/site-packages/torch/serialization.py:241: UserWarning: Couldn't retrieve source code for container of type RNN. It won't be checked for correctness upon loading.\n",
+      "  \"type \" + obj.__name__ + \". It won't be checked \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Trained and Saved\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
@@ -760,7 +803,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** (Write answer, here)"
+    "**Answer:**\n",
+    "\n",
+    "During my first training attempts I tried with smaller batch_size and sequence_length parameters but after just a few iterations, the loss was quite large and not dropping significantly, so I increased the parameters a number of times and finally settled on sequence_length = 10 and batch_size = 128.\n",
+    "\n",
+    "I subsequently tried training with 7 epochs, 2 RNN layers, 256 hidden dimensions but my loss was only 3.42, so I thought I could improve on this. I increased to 10 epochs and observed a loss of 3.31 on the final epoch - not a great advancement from the previous attempt.\n",
+    "\n",
+    "I then tried tweaking the hyperparameters: keeping my 10 epochs, I set 350 hidden dimensions and 3 RNN layers. The training time increased rather dramatically and I observed that the loss resulted in only 3.35! A higher loss than in the previous iteration. As per the course notes, it appears that a good number of hidden dimensions is between 200~300, so I reverted to that.\n",
+    "\n",
+    "I also tried with 250 hidden dimensions and 3 RNN layers. By the 10th epoch, I observed a loss of 3.4, which also was not better than my first attempt. It seems that the added RNN layer was actually not beneficial, so I dropped back down to 2.\n",
+    "\n",
+    "Ultimately, by using an embedding_dim of 300, a hidden_dim of 260, 2 RNN layers, 10 epochs and a learning rate of 0.001, I achieved a loss of 3.31, so I decided to stick with this configuration."
    ]
   },
   {
@@ -775,10 +828,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -805,10 +856,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
@@ -881,11 +930,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jerry: little moron business.\n",
+      "\n",
+      "kramer: well, my roommate goes to head. she sounds for one of those hands. ill get it! i dont have the(kisses the jacket away) oh you gotta give you a second, that's one day for three hours. believe it, she's very thrill to me.(they embrace get upset)\n",
+      "\n",
+      "kramer: whew\n",
+      "\n",
+      "morty: you're just nuts about the surface map?\n",
+      "\n",
+      "kramer:(dry in) he's runnin, hold on. i must be going to see you about the pasta company.\n",
+      "\n",
+      "frank: what's did that about?\n",
+      "\n",
+      "health bergen: well, we're getting out of a bathroom. i'll be trouble and wondering i mean how susan isn't i've met!\n",
+      "\n",
+      "jerry: oh! these tickets!\n",
+      "\n",
+      "elaine: what, are you?\n",
+      "\n",
+      "kramer: boxers have there.\n",
+      "\n",
+      "george: talk to anyone?\n",
+      "\n",
+      "george: no. i want a feeling onto him. don't!(opens the door)\n",
+      "\n",
+      "ed: it's a mental hotel? so, this is too dinner to you? if- mile, on the dugout now, shut up easy- call kramer up for it\n",
+      "\n",
+      "jerry: yeah, look, it's pretty late. now you're right.\n",
+      "\n",
+      "george: but because we don't wanna be doing this afternoon.\n",
+      "\n",
+      "jerry: just on it!\n",
+      "\n",
+      "jerry:(to jerry, sitting on door) what happened if you get books?\n",
+      "\n",
+      "jerry: next- cleaned.\n",
+      "\n",
+      "newman: giddy- pile?\n",
+      "\n",
+      "elaine: yeah. i think\n",
+      "\n",
+      "kramer: all right.(quickly leaves)\n",
+      "\n",
+      "jerry: well, i gotta go to the hospital, its a good one for the doctors cannot meet me, i dropped my parent's disease. oh. okay, that is such an headed picture on the car.\n",
+      "\n",
+      "brett: my address, peggy. this man is on the hall??\n",
+      "\n",
+      "george:(pointing to jerry's) okay, now we the night party?\n",
+      "\n",
+      "helen: when you're back in chinatown, and then she starts walking.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# run the cell multiple times to get different results!\n",
     "gen_length = 400 # modify the length to your preference\n",
@@ -910,14 +1014,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save script to a text file\n",
-    "f = open(\"generated_script_1.txt\",\"w\")\n",
+    "f = open('generated_script_1.txt', 'w')\n",
     "f.write(generated_script)\n",
     "f.close()"
    ]
@@ -936,9 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
